[Refactor] Fix the uneven x

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -154,7 +154,7 @@
 }
 
 .hamburger.active .bar:nth-child(1) {
-    transform: rotate(-45deg) translate(-5px, 6px);
+    transform: translate(0, 9px) rotate(-45deg);
 }
 
 .hamburger.active .bar:nth-child(2) {
@@ -162,7 +162,7 @@
 }
 
 .hamburger.active .bar:nth-child(3) {
-    transform: rotate(45deg) translate(-5px, -6px);
+    transform: translate(0, -9px) rotate(45deg);
 }
 
 .bar {
